FINALLY fixed scrollbar in chat-container div

--- a/client/css/chat-prefix.css
+++ b/client/css/chat-prefix.css
@@ -72,8 +72,7 @@ body{
 	width: 100%;
 }
 
-.chat-container{
-	position: relative;
+.chat-box{
 	width: 100%;
 	height: 262px;
 	display: -webkit-box;
@@ -85,6 +84,37 @@ body{
 	-webkit-flex-direction: column-reverse;
 	    -ms-flex-direction: column-reverse;
 	        flex-direction: column-reverse;
+}
+
+.chat-wrapper{
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    height: 100%;
+}
+
+.chat-container{
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    overflow: auto;
+    max-height: 100%;
     background-color: rgb(221, 221, 221);
     word-wrap: break-word;
 }
