--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -50,12 +50,25 @@ body{
 	width: 100%;
 }
 
-.chat-container{
-	position: relative;
+.chat-box{
 	width: 100%;
 	height: 262px;
 	display: flex;
 	flex-direction: column-reverse;
+}
+
+.chat-wrapper{
+	display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 100%;
+}
+
+.chat-container{
+	display: flex;
+    flex-direction: column;
+    overflow: auto;
+    max-height: 100%;
     background-color: rgb(221, 221, 221);
     word-wrap: break-word;
 }
